--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -8,6 +8,6 @@
   justify-content: center;
 }
 
-#article-metadata {display:none !important;}
+.article-metadata {display:none !important;}
 
 .share-box {display:none !important;}
