--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -11,3 +11,5 @@
 .article-metadata {display:none !important;}
 
 .share-box {display:none !important;}
+
+.pub-row-heading {display:none !important;}
