--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -13,3 +13,5 @@
 .share-box {display:none !important;}
 
 .pub-row-heading {display:none !important;}
+
+.content-widget-hr {display:none !important;}
