--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -15,3 +15,5 @@
 .pub-row-heading {display:none !important;}
 
 .content-widget-hr {display:none !important;}
+
+.col-lg-2 {display:none !important;}
